3-operators/aap/base/hub_route.yml
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  annotations:
    cert-manager.io/issuer-kind: ClusterIssuer
    cert-manager.io/issuer-name: letsencrypt-sandbox
  name: automation-hub
